tdf#137839 sw: add drawing shapes anchored in selection to overlay

This is mostly a UI problem: if text is selected, then any objects
anchored in the selection are implicitly selected as well.

Unfortunately only fly frames are painted with the selection overlay,
but there doesn't seem to be a reason not to paint the SdrObjects as
well.

Change-Id: I0d9e35fdd1e1bdcc73a4c71b069993e670b5468d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162262
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>